# EtwEnumerator-win32metadata

./: .gitignore  CMakeLists.txt  CmakePresets.json  LICENSE  README.md
.github/workflows/: build.yml  release.yml
EtwEnumerator/: EtwEnumerator.Win32Metadata.nuspec  EtwEnumerator.Win32Metadata.proj  EtwEnumerator.def  EtwEnumerator_DllMain.cpp
src/: CMakeLists.txt  EtwEnumerator.Win32Metadata.nuspec  EtwEnumerator.Win32Metadata.proj  EtwEnumerator.Win32Metadata.props  EtwEnumerator.h  EtwEnumerator_Export.cpp  EtwEnumerator_Export.h  main.cpp
